Fixed b98 spacing bug; fixed incorrect naming of project (technically a renaming)

--- a/assets/css/b98/b98.css
+++ b/assets/css/b98/b98.css
@@ -181,7 +181,7 @@
 }
 
 #bf-fungespace div div span {
-    display: inline-flex;
+    display: flow-root;
     justify-content: center;
     position: relative;
     top: -4px;
